@@ -62,7 +62,7 @@
 #' # get a factor for merging
 #' f <- factor(regmatches(rownames(esophagus),
 #'                        regexpr("^[0-9]*_[0-9]*",rownames(esophagus))))
-#' merged <- mergeRows(esophagus,f)
+#' merged <- mergeRows(esophagus,f, mergeTree = TRUE)
 #' plot(rowTree(merged))
 #' #
 #' data(GlobalPatterns)
@@ -178,7 +178,7 @@ setGeneric("mergeCols",
         " with agglomerated data.",
                 call. = FALSE)
     }
-    if( any(assay < 0) ){
+    if( !all( assay >= 0 | is.na(assay) ) ){
         warning(paste0("'",assay_name,"'", " includes negative values."),
                 "\nAgglomeration of it might lead to meaningless values.",
                 "\nCheck the assay, and consider doing transformation again manually", 
@@ -256,6 +256,47 @@ setMethod("mergeCols", signature = c(x = "SummarizedExperiment"),
     list(newTree = newTree, newAlias = newAlias)
 }
 
+# Merge trees, MARGIN specifies if trees are rowTrees or colTrees
+.merge_trees <- function(x, mergeTree, MARGIN){
+    # Get rowtrees or colTrees based on MARGIN
+    if( MARGIN == 1 ){
+        trees <- x@rowTree
+        links <- rowLinks(x)
+    } else{
+        trees <- x@colTree
+        links <- colLinks(x)
+    }
+    # If trees exist and mergeTree is TRUE
+    if(!is.null(trees) && mergeTree){
+        # Loop over trees and replace them one by one
+        for( i in seq_len(length(trees)) ){
+            # Get tree
+            tree <- trees[[i]]
+            # Get the name of the tree
+            tree_name <- names(trees)[[i]]
+            # Subset links by taking only those rows that are included in tree
+            links_sub <- links[ links$whichTree == tree_name, , drop = FALSE ]
+            # Merge tree
+            tmp <- .merge_tree(tree, links_sub)
+            # Based on MARGIN, replace ith rowTree or colTree
+            if( MARGIN == 1 ){
+                x <- changeTree(x = x,
+                                rowTree = tmp$newTree,
+                                rowNodeLab = tmp$newAlias,
+                                whichRowTree = i
+                )
+            } else{
+                x <- changeTree(x = x,
+                                colTree = tmp$newTree,
+                                colNodeLab = tmp$newAlias,
+                                whichColTree = i
+                )
+            }
+        }
+    }
+    return(x)
+}
+
 #' @importFrom Biostrings DNAStringSetList
 .merge_refseq_list <- function(sequences_list, f, names, ...){
     threshold <- list(...)[["threshold"]]
@@ -301,14 +342,7 @@ setMethod("mergeRows", signature = c(x = "TreeSummarizedExperiment"),
         #
         x <- callNextMethod(x, f, archetype = 1L, ...)
         # optionally merge rowTree
-        tree <- rowTree(x)
-        if(!is.null(tree) && mergeTree){
-            tmp <- .merge_tree(tree, rowLinks(x))
-            #
-            x <- changeTree(x = x,
-                            rowTree = tmp$newTree,
-                            rowNodeLab = tmp$newAlias)
-        }
+        x <- .merge_trees(x, mergeTree, 1)
         # optionally merge referenceSeq
         if(!is.null(refSeq)){
             referenceSeq(x) <- .merge_refseq_list(refSeq, f, rownames(x), ...)
@@ -329,14 +363,7 @@ setMethod("mergeCols", signature = c(x = "TreeSummarizedExperiment"),
         #
         x <- callNextMethod(x, f, archetype = 1L, ...)
         # optionally merge colTree
-        tree <- colTree(x)
-        if(!is.null(tree) && mergeTree){
-            tmp <- .merge_tree(tree, colLinks(x))
-            #
-            x <- changeTree(x = x,
-                            colTree = tmp$newTree,
-                            colNodeLab = tmp$newAlias)
-        }
-        x
+        x <- .merge_trees(x, mergeTree, 2)
+        return(x)
     }
 )
